# MRag-Digitised

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  mrag-project-plan.md  pyproject.toml
.specify/integrations/: codex.manifest.json  cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/: mrag-phase4-frontend-plan.md  notes.txt
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/scripts/: build-check.mjs
frontend/src/: App.tsx  bootstrap.tsx  config.ts  main.tsx  router.tsx
frontend/tests/: setup.ts
prompts/templates/: fallback_prompt.j2  qa_prompt.j2  report.html.j2  system_prompt.j2
specs/001-project-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase1-rag-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-phase2-rag-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-phase3-rag-bonus/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-frontend-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-chat-ui-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/mrag/: __init__.py  config.py  exceptions.py  logging.py  pipeline.py
tests/: conftest.py
tests/fixtures/: eval_dataset_small.jsonl  eval_reference_answers.json
tests/integration/: test_data_pipeline.py  (+6 more)
(+182 files in other folders)
