[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrag"
dynamic = ["version"]
description = "Multilingual RAG Platform — AI-powered Retrieval-Augmented Generation system"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "structlog==25.2.0",
    "python-dotenv==1.1.0",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "sqlalchemy==2.0.41",
    "sentence-transformers==4.1.0",
    "faiss-cpu==1.11.0",
    "pandas==2.2.3",
    "numpy==2.2.6",
    "scikit-learn==1.6.1",
    "httpx==0.28.1",
    "Jinja2==3.1.6",
    "aiosqlite~=0.20",
    "sacrebleu~=2.4",
    "rouge-score~=0.1",
    "matplotlib~=3.9",
    "pypdf==4.3.1",
    "python-docx==1.1.2",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "ruff==0.11.7",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
]
mysql = [
    "aiomysql~=0.2",
]

[tool.setuptools.dynamic]
version = {attr = "mrag.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # Depends() in argument defaults is standard FastAPI DI pattern

[tool.ruff.lint.per-file-ignores]
"src/mrag/evaluation/report_generator.py" = ["E501"]  # inline HTML templates cannot be meaningfully wrapped

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
